Some css fixes for better homepage rendering on mobile
- i hope this doesn't affect the rest of the site

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -23,7 +23,8 @@ img {
 
 html, body {
     max-width: 100%!important;
-    overflow-x: hidden!important;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 .post-image{
@@ -97,7 +98,6 @@ body {
   color: black;
   font-family: arial,helvetica,sans-serif;
   font-size: 10pt;
-  margin: 0 4px;
   padding-left: 4px;
   padding-right: 4px;
 }
